--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ระบบจัดการโครงการ - Green Theme</title>
+    <title>ระบบจัดการโครงการ</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -496,7 +496,7 @@
                 </div>
                 <div class="row align-items-center">
                     <div class="col-md-8">
-                        <p class="mb-0">แสดงข้อมูลจาก 3 ชีท: สมัครโครงการทั้งหมด, ตรวจแล้ว, ข้อมูลการตรวจผ่านแล้ว</p>
+                        <p class="mb-0">แสดงข้อมูลจาก 2 ชีท: Data โครงการ, Data การตรวจ</p>
                     </div>
                     <div class="col-md-4 text-md-end">
                         <div class="sheet-info">
@@ -733,7 +733,7 @@
                 </div>
             </div>
             <hr class="my-3" style="border-color: rgba(255,255,255,0.1);">
-            <p class="mb-0 small">© พ.ศ. 2566 ระบบจัดการโครงการ | Green Pastel Theme</p>
+            <p class="mb-0 small">© พ.ศ. 2569 ระบบจัดการโครงการ | KBS </p>
         </div>
     </div>
 
