--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ระบบจัดการโครงการ</title>
+    <title>ระบบจัดการโครงการ - Green Pastel Theme</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -673,8 +673,8 @@
                     <div class="filter-buttons mt-3">
                         <button class="filter-btn active" data-filter="all">ทั้งหมด</button>
                         <button class="filter-btn" data-filter="recent">ล่าสุด (30 วัน)</button>
-                        <button class="filter-btn" data-filter="area-high">พื้นที่ใหญ่ (>10 ไร่)</button>
-                        <button class="filter-btn" data-filter="area-low">พื้นที่เล็ก (≤10 ไร่)</button>
+                        <button class="filter-btn" data-filter="area-high">พื้นที่ใหญ่ (>5 ไร่)</button>
+                        <button class="filter-btn" data-filter="area-low">พื้นที่เล็ก (≤5 ไร่)</button>
                         <button class="btn-outline-green" id="refresh-btn">
                             <i class="fas fa-redo-alt me-1"></i>รีเฟรช
                         </button>
@@ -792,7 +792,7 @@
                 <div class="col-md-6 text-md-start">
                     <h5 class="mb-3">ระบบจัดการโครงการเกษตร</h5>
                     <p class="small mb-0">ข้อมูลโครงการและผลการตรวจแปลงจาก Google Sheets</p>
-                    <p class="small mb-0">โครงการ | Public Mode</p>
+                    <p class="small mb-0">ธีมสีเขียวพาสเทส | Public Mode</p>
                 </div>
                 <div class="col-md-6 text-md-end mt-3 mt-md-0">
                     <p class="mb-1">Sheet ID: 12TQKzC0ElmjCGfxz7dqW8ueO8X7Ynpcu9cpTYKUYRtM</p>
@@ -801,7 +801,7 @@
                 </div>
             </div>
             <hr class="my-3" style="border-color: rgba(255,255,255,0.1);">
-            <p class="mb-0 small">© พ.ศ. 2569 ระบบจัดการโครงการเกษตร | KBS เติมชีวิต เติมสุข</p>
+            <p class="mb-0 small">© พ.ศ. 2566 ระบบจัดการโครงการเกษตร | Green Pastel Theme</p>
         </div>
     </div>
 
