--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ระบบจัดการโครงการ - Green Pastel Theme</title>
+    <title>โครงการ ปี 69/70</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -693,7 +693,7 @@
                 </div>
                 <div class="row align-items-center">
                     <div class="col-md-8">
-                        <p class="mb-0">แสดงข้อมูลจาก Google Sheets: ข้อมูลโครงการทั้งหมด (คอลัมน์ A-P) และเงื่อนไขโครงการ</p>
+                        <p class="mb-0">แสดงข้อมูลจาก Google Sheets: ข้อมูลโครงการทั้งหมด</p>
                     </div>
                     <div class="col-md-4 text-md-end">
                         <div class="sheet-info">
@@ -849,7 +849,7 @@
                 <div class="card-header d-flex justify-content-between align-items-center">
                     <div>
                         <i class="fas fa-database"></i>
-                        <span id="table-title">ข้อมูลโครงการทั้งหมด (คอลัมน์ A-P)</span>
+                        <span id="table-title">ข้อมูลโครงการทั้งหมด</span>
                         <span class="badge bg-white text-green ms-2" id="record-count">0 รายการ</span>
                     </div>
                     <div>
@@ -985,7 +985,7 @@
             <div class="row">
                 <div class="col-md-6 text-md-start">
                     <h5 class="mb-3">ระบบจัดการโครงการเกษตร</h5>
-                    <p class="small mb-0">ข้อมูลโครงการ (คอลัมน์ A-P) และเงื่อนไขโครงการจาก Google Sheets</p>
+                    <p class="small mb-0">ข้อมูลโครงการ จาก Google Sheets</p>
                     <p class="small mb-0">ธีมสีเขียวพาสเทส | Public Mode</p>
                 </div>
                 <div class="col-md-6 text-md-end mt-3 mt-md-0">
@@ -995,7 +995,7 @@
                 </div>
             </div>
             <hr class="my-3" style="border-color: rgba(255,255,255,0.1);">
-            <p class="mb-0 small">© พ.ศ. 2566 ระบบจัดการโครงการเกษตร | Green Pastel Theme</p>
+            <p class="mb-0 small">© พ.ศ. 2569 ระบบจัดการโครงการเกษตร | Green Pastel Theme</p>
         </div>
     </div>
 
@@ -1013,22 +1013,20 @@
         
         // Field mapping for project sheet (คอลัมน์ A-P) - ตาม Google Sheets จริง
         const PROJECT_FIELDS_A_P = [
-            'รหัสโครงการ',           // A
-            'ชื่อโครงการ',           // B
-            'ประเภทโครงการ',         // C
-            'ชื่อเกษตรกร',           // D
-            'ที่อยู่แปลง',           // E
-            'พื้นที่ (ไร่)',         // F
-            'วันที่เริ่มโครงการ',     // G
-            'สถานะ',                // H
-            'งบประมาณสนับสนุน',     // I
-            'ผู้รับผิดชอบโครงการ',   // J
-            'เบอร์ติดต่อ',           // K
-            'หมายเหตุ',              // L
-            'ความคืบหน้า (%)',       // M
-            'วันที่สิ้นสุดโครงการ',   // N
-            'ผลผลิตที่คาดหวัง',      // O
-            'ปัญหาอุปสรรค'          // P
+            'วันที่ตรวจแปลง',           // A
+            'รหัสนักเกษตร',           // B
+            'ชื่อนักเกษตร',         // C
+            'เขต',           // D
+            'ชื่อประเภทอ้อย',           // E
+            'พื้นที่',         // F
+            'เลขแปลงintech',     // G
+            'เลขโควตา',                // H
+            'ชื่อชาวไร่',     // I
+            'วันที่ปลูก',   // J
+            'เปอร์เซ็นการงอก',           // K
+            'พิกัด',              // L
+            'ตรวจแปลง',       // M
+            'สถานะโครงการ'
         ];
         
         // Field mapping for inspection sheet
