--- a/index.html
+++ b/index.html
@@ -1013,15 +1013,15 @@
         
         // Field mapping for project sheet (คอลัมน์ A-P) - ตาม Google Sheets จริง
         const PROJECT_FIELDS_A_P = [
-            'วันที่ตรวจแปลง',           // A
-            'รหัสนักเกษตร',           // B
+            'เลขแปลงintech',           // A
+            'เลขโควตา',           // B
+            'ชื่อชาวไร่',         // C
+            'รหัสนักเกษตร',         // C
             'ชื่อนักเกษตร',         // C
             'เขต',           // D
             'ชื่อประเภทอ้อย',           // E
             'พื้นที่',         // F
-            'เลขแปลงintech',     // G
-            'เลขโควตา',                // H
-            'ชื่อชาวไร่',     // I
+            'วันที่วัดแปลง',     // G
             'วันที่ปลูก',   // J
             'เปอร์เซ็นการงอก',           // K
             'พิกัด',              // L
