--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
                     </div>
                     <div>
                         <h1 class="logo mb-0">ระบบจัดการโครงการเกษตร</h1>
-                        <p class="subtitle mb-0">ข้อมูลโครงการและเงื่อนไขโครงการ</p>
+                        <p class="subtitle mb-0">ข้อมูลโครงการปลูกอ้อยในนาและเปลี่ยนพืชอื่นมาปลูกอ้อย</p>
                     </div>
                 </div>
                 <div class="row align-items-center">
@@ -765,7 +765,7 @@
                     <i class="fas fa-list-check"></i>ข้อมูลโครงการ (A-P)
                 </button>
                 <button class="tab-btn" data-sheet="Dataการตรวจ">
-                    <i class="fas fa-clipboard-check"></i>เงื่อนไขโครงการ
+                    <i class="fas fa-clipboard-check"></i>ผลการตรวจแปลง
                 </button>
             </div>
 
