--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
             <!-- Tabs -->
             <div class="tab-container">
                 <button class="tab-btn active" data-sheet="Dataโครงการ">
-                    <i class="fas fa-list-check"></i>ข้อมูลโครงการ (A-P)
+                    <i class="fas fa-list-check"></i>ข้อมูลโครงการ
                 </button>
                 <button class="tab-btn" data-sheet="Dataการตรวจ">
                     <i class="fas fa-clipboard-check"></i>ผลการตรวจแปลง
