--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@
                 </div>
             </div>
             <hr class="my-3" style="border-color: rgba(255,255,255,0.1);">
-            <p class="mb-0 small">© พ.ศ. 2569 ระบบจัดการโครงการเกษตร | Green Pastel Theme</p>
+            <p class="mb-0 small">© พ.ศ. 2569 ระบบจัดการโครงการเกษตร | เติมหวาน เติมสุข เติมน้ำตาล KBS</p>
         </div>
     </div>
 
@@ -924,7 +924,7 @@
         // Field mapping for project sheet (คอลัมน์ A-P) - ตาม Google Sheets จริง
         const PROJECT_FIELDS_A_P = [
             'เลขแปลงintech',           // A
-            'เลขโควตา',                // B
+            'เลขโควต้า',                // B
             'ชื่อชาวไร่',              // C
             'รหัสนักเกษตร',            // D
             'ชื่อนักเกษตร',            // E
@@ -1394,7 +1394,7 @@
             // Show important columns for projects
             const importantColumns = [
                 'เลขแปลงintech', 
-                'เลขโควตา', 
+                'เลขโควต้า', 
                 'ชื่อชาวไร่', 
                 'เขต', 
                 'รหัสนักเกษตร', 
