--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="th">
 <head>
     <meta charset="UTF-8">
@@ -772,7 +772,15 @@
                                 <input type="text" id="search-input" class="form-control" placeholder="ค้นหาโครงการ, ชื่อเกษตรกร, ที่อยู่แปลง...">
                             </div>
                         </div>
-                       
+                        <div class="col-md-3">
+                            <select id="status-filter" class="form-select">
+                                <option value="all">สถานะทั้งหมด</option>
+                                <option value="รอ">รอตรวจสอบ</option>
+                                <option value="อนุมัติ">อนุมัติแล้ว</option>
+                                <option value="ไม่อนุมัติ">ไม่อนุมัติ</option>
+                                <option value="กำลังดำเนิน">กำลังดำเนินการ</option>
+                            </select>
+                        </div>
                         <div class="col-md-3">
                             <select id="condition-filter" class="form-select">
                                 <option value="all">เงื่อนไขทั้งหมด</option>
@@ -897,7 +905,7 @@
                 </div>
             </div>
             <hr class="my-3" style="border-color: rgba(255,255,255,0.1);">
-            <p class="mb-0 small">© พ.ศ. 2569 ระบบจัดการโครงการเกษตร | เติมหวาน เติมสุข เติมน้ำตาล KBS</p>
+            <p class="mb-0 small">© พ.ศ. 2569 ระบบจัดการโครงการเกษตร | Green Pastel Theme</p>
         </div>
     </div>
 
