--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>โครงการ ปี 69/70</title>
+    <title>ข้อมูลโครงการปลูกอ้อยในนา และโครงการเปลี่ยนพืชอื่นมาปลูกอ้อย ปี 69/70</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -668,7 +668,7 @@
                     </div>
                     <div>
                         <h1 class="logo mb-0">ระบบจัดการโครงการเกษตร</h1>
-                        <p class="subtitle mb-0">ข้อมูลโครงการปลูกอ้อยในนาและเปลี่ยนพืชอื่นมาปลูกอ้อย</p>
+                        <p class="subtitle mb-0">ข้อมูลโครงการปลูกอ้อยในนา และโครงการเปลี่ยนพืชอื่นมาปลูกอ้อย</p>
                     </div>
                 </div>
                 <div class="row align-items-center">
@@ -1404,7 +1404,7 @@
                 'ชื่อชาวไร่', 
                 'เขต', 
                 'รหัสนักเกษตร', 
-                'ชื่อประเภทอ้อย', 
+                'วันที่ปลูก', 
                 'เงื่อนไขโครงการ'
             ];
             
