--- a/index.html
+++ b/index.html
@@ -672,8 +672,8 @@
                          alt="KBS Group Logo" 
                          class="logo-img">
                     <div class="logo-text">
-                        <h1 class="logo-title">KBS Group</h1>
-                        <p class="logo-subtitle">ระบบจัดการโครงการปลูกอ้อยในนา และโครงการเปลี่ยนพืชอื่นมาปลูกอ้อย ปี 69/70</p>
+                        <h1 class="logo-title">ระบบจัดการโครงการ</h1>
+                        <p class="logo-subtitle">ข้อมูลโครงการปลูกอ้อยในนา และโครงการเปลี่ยนพืชอื่นมาปลูกอ้อย ปี 69/70</p>
                     </div>
                 </div>
                 <div class="row align-items-center">
@@ -707,7 +707,7 @@
                 <div class="setup-steps">
                     <div class="step">
                         <span class="step-number">1</span>
-                        <strong>ข้อมูลโครงการ KBS Group</strong>
+                        <strong>ข้อมูลโครงการ</strong>
                         <p class="mb-0 mt-1">ระบบนี้แสดงข้อมูลโครงการปลูกอ้อยในนา และโครงการเปลี่ยนพืชอื่นมาปลูกอ้อย ปี 69/70</p>
                     </div>
                     
@@ -728,7 +728,7 @@
                     <i class="fas fa-play-circle me-2"></i>เริ่มใช้งานระบบ
                 </button>
                 
-                <p class="mt-3 text-muted small">* ระบบนี้สำหรับใช้ภายในองค์กร KBS Group เท่านั้น</p>
+                <p class="mt-3 text-muted small">* ระบบนี้สำหรับใช้ภายในองค์กรเท่านั้น</p>
             </div>
         </div>
 
@@ -740,10 +740,10 @@
                     <i class="fas fa-list-check"></i>ข้อมูลโครงการทั้งหมด
                 </button>
                 <button class="tab-btn" data-sheet="planting-sugarcane-field">
-                    <i class="fas fa-tractor"></i>ปลูกอ้อยในนา ปี69/70
+                    <i class="fas fa-tractor"></i>ปลูกอ้อยในนา ปี 69/70
                 </button>
                 <button class="tab-btn" data-sheet="crop-change-sugarcane">
-                    <i class="fas fa-exchange-alt"></i>เปลี่ยนพืชอื่นมาปลูกอ้อย ปี69/70
+                    <i class="fas fa-exchange-alt"></i>เปลี่ยนพืชอื่นมาปลูกอ้อย ปี 69/70
                 </button>
             </div>
 
@@ -771,9 +771,6 @@
             <div class="view-toggle" id="view-toggle">
                 <button class="btn btn-sm btn-outline-green active" data-view="table">
                     <i class="fas fa-table me-1"></i>มุมมองตาราง
-                </button>
-                <button class="btn btn-sm btn-outline-green ms-2" data-view="card">
-                    <i class="fas fa-th-large me-1"></i>มุมมองการ์ด
                 </button>
             </div>
 
