--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KBS Group - ระบบจัดการโครงการปลูกอ้อยในนาและเปลี่ยนพืชอื่นมาปลูกอ้อย ปี 69/70</title>
+    <title>ระบบจัดการโครงการปลูกอ้อยในนา และโครงการเปลี่ยนพืชอื่นมาปลูกอ้อย ปี 69/70</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -1061,13 +1061,13 @@
                          alt="KBS Group Logo" 
                          class="logo-img kbs-logo">
                     <div class="logo-text">
-                        <h1 class="logo-title">ระบบจัดการโครงการปลูกอ้อยในนาและเปลี่ยนพืชอื่นมาปลูกอ้อย</h1>
-                        <p class="logo-subtitle">โครงการปลูกอ้อยในนาและเปลี่ยนพืชอื่นมาปลูกอ้อย ปี 69/70</p>
+                        <h1 class="logo-title">ระบบจัดการโครงการปลูกอ้อยในนา และโครงการเปลี่ยนพืชอื่นมาปลูกอ้อย ปี 69/70</h1>
+                        <p class="logo-subtitle">โรงงานน้ำตาลครบุรี และโรงงานน้ำตาลสีคิ้ว</p>
                     </div>
                 </div>
                 <div class="row align-items-center">
                     <div class="col-md-8">
-                        <p class="mb-0">แสดงข้อมูลโครงการปลูกอ้อยในนาและเปลี่ยนพืชอื่นมาปลูกอ้อย ปี 69/70</p>
+                        <p class="mb-0">ข้อมูลโครงการปลูกอ้อยในนา และโครงการเปลี่ยนพืชอื่นมาปลูกอ้อย ปี 69/70</p>
                     </div>
                     <div class="col-md-4 text-md-end">
                         <div class="sheet-info">
@@ -1098,7 +1098,7 @@
                     <div class="step">
                         <span class="step-number">1</span>
                         <strong>ข้อมูลโครงการ KBS Group</strong>
-                        <p class="mb-0 mt-1">ระบบนี้แสดงข้อมูลโครงการปลูกอ้อยในนาและโครงการเปลี่ยนพืชอื่นมาปลูกอ้อย ปี 69/70</p>
+                        <p class="mb-0 mt-1">ระบบนี้แสดงข้อมูลโครงการปลูกอ้อยในนา และโครงการเปลี่ยนพืชอื่นมาปลูกอ้อย ปี 69/70</p>
                     </div>
                     
                     <div class="step">
@@ -1140,7 +1140,7 @@
                 <div class="col-lg-4">
                     <div class="pie-chart-container">
                         <h4 class="chart-title">
-                            <i class="fas fa-chart-pie me-2"></i>สถิติเงื่อนไขโครงการ
+                            <i class="fas fa-chart-pie me-2"></i>ผลการตรวจแปลง
                         </h4>
                         <div style="position: relative; height: 300px;">
                             <canvas id="conditionPieChart"></canvas>
@@ -1148,11 +1148,11 @@
                         <div class="chart-stats">
                             <div class="chart-stat-item">
                                 <div class="chart-stat-value text-success" id="passed-percentage">0%</div>
-                                <div class="chart-stat-label">ผ่านเงื่อนไข</div>
+                                <div class="chart-stat-label">ผ่าน</div>
                             </div>
                             <div class="chart-stat-item">
                                 <div class="chart-stat-value text-danger" id="failed-percentage">0%</div>
-                                <div class="chart-stat-label">ไม่ผ่านเงื่อนไข</div>
+                                <div class="chart-stat-label">ไม่ผ่าน</div>
                             </div>
                             <div class="chart-stat-item">
                                 <div class="chart-stat-value text-warning" id="pending-percentage">0%</div>
@@ -1175,27 +1175,27 @@
                         </div>
                         <div class="stat-item stat-item-checked">
                             <div class="stat-value text-primary" id="checked-projects">0</div>
-                            <div class="stat-title">โครงการที่ตรวจแล้ว</div>
+                            <div class="stat-title">ตรวจแล้ว(แปลง)</div>
                         </div>
                         <div class="stat-item stat-item-checked">
                             <div class="stat-value text-primary" id="checked-area">0</div>
-                            <div class="stat-title">พื้นที่ตรวจแล้ว (ไร่)</div>
+                            <div class="stat-title">ตรวจแล้ว (ไร่)</div>
                         </div>
                         <div class="stat-item stat-item-not-checked">
                             <div class="stat-value" id="not-checked-projects">0</div>
-                            <div class="stat-title">ยังไม่ตรวจแปลง</div>
+                            <div class="stat-title">ยังไม่ตรวจ(แปลง)</div>
                         </div>
                         <div class="stat-item stat-item-not-checked">
                             <div class="stat-value" id="not-checked-area">0</div>
-                            <div class="stat-title">พื้นที่ยังไม่ตรวจ (ไร่)</div>
+                            <div class="stat-title">ยังไม่ตรวจ(ไร่)</div>
                         </div>
                         <div class="stat-item stat-item-passed">
                             <div class="stat-value" id="passed-projects">0</div>
-                            <div class="stat-title">ผ่านเงื่อนไข</div>
+                            <div class="stat-title">ผ่าน(แปลง)</div>
                         </div>
                         <div class="stat-item stat-item-failed">
                             <div class="stat-value" id="failed-projects">0</div>
-                            <div class="stat-title">ไม่ผ่านเงื่อนไข</div>
+                            <div class="stat-title">ไม่ผ่าน(แปลง)</div>
                         </div>
                     </div>
                 </div>
@@ -1227,9 +1227,9 @@
                     </div>
                     <div class="col-md-4">
                         <select id="condition-filter" class="form-select">
-                            <option value="all">เงื่อนไขทั้งหมด</option>
-                            <option value="ผ่าน">ผ่านเงื่อนไข</option>
-                            <option value="ไม่ผ่าน">ไม่ผ่านเงื่อนไข</option>
+                            <option value="all">ผลการตรวจแปลง</option>
+                            <option value="ผ่าน">ผ่าน</option>
+                            <option value="ไม่ผ่าน">ไม่ผ่าน</option>
                             <option value="รอตรวจแปลง">รอตรวจแปลง</option>
                             <option value="ตรวจแล้ว">ตรวจแล้วทั้งหมด</option>
                             <option value="ยังไม่ตรวจ">ยังไม่ตรวจแปลง</option>
