--- a/index.html
+++ b/index.html
@@ -1167,11 +1167,11 @@
                     <div class="stats-grid" id="project-stats">
                         <div class="stat-item">
                             <div class="stat-value text-success" id="total-projects">0</div>
-                            <div class="stat-title">โครงการทั้งหมด</div>
+                            <div class="stat-title">ทั้งหมด(แปลง)</div>
                         </div>
                         <div class="stat-item">
                             <div class="stat-value" id="total-area">0</div>
-                            <div class="stat-title">พื้นที่รวม (ไร่)</div>
+                            <div class="stat-title">พื้นที่รวม(ไร่)</div>
                         </div>
                         <div class="stat-item stat-item-checked">
                             <div class="stat-value text-primary" id="checked-projects">0</div>
@@ -1443,43 +1443,43 @@
                                     <li>
                                         <strong>โครงการปลูกอ้อยในนา</strong>
                                         <ul class="sub-condition-list">
-                                            <li>เพื่อเป็นกลยุทธ์ขยายพื้นที่</li>
-                                            <li>ระยะเวลาปลูก 1 ตุลาคม 2568 ถึง 28 กุมภาพันธ์ 2569</li>
-                                            <li>พื้นที่ปลูกอ้อยใหม่ (ปลายฝนขยาย) จำนวน 15,000 ไร่</li>
-                                            <li>ช่วยค่าปลูก 800 บาท/ไร่ จำนวน 12,000,000 บาท</li>
+                                            <li>   เพื่อเป็นกลยุทธ์ขยายพื้นที่</li>
+                                            <li>   ระยะเวลาปลูก 1 ตุลาคม 2568 ถึง 28 กุมภาพันธ์ 2569</li>
+                                            <li>   พื้นที่ปลูกอ้อยใหม่ (ปลายฝนขยาย) จำนวน 15,000 ไร่</li>
+                                            <li>   ช่วยค่าปลูก 800 บาท/ไร่ จำนวน 12,000,000 บาท</li>
                                         </ul>
                                     </li>
                                     <li>
                                         <strong>เงื่อนไขการจ่าย</strong>
                                         <ul class="sub-condition-list">
-                                            <li>ไม่จ่ายเป็นเงินสด</li>
-                                            <li>ลดหนี้ค่าปุ๋ย ยา บริการจักรกล พันธุ์อ้อย</li>
-                                            <li>พื้นที่ขยาย (เปลี่ยนพืชอื่นมาปลูกอ้อย)</li>
+                                            <li>   ไม่จ่ายเป็นเงินสด</li>
+                                            <li>   ลดหนี้ค่าปุ๋ย ยา บริการจักรกล พันธุ์อ้อย</li>
+                                            <li>   พื้นที่ขยาย (เปลี่ยนพืชอื่นมาปลูกอ้อย)</li>
                                         </ul>
                                     </li>
                                     <li>
                                         <strong>วิธีการปลูก</strong>
                                         <ul class="sub-condition-list">
-                                            <li>ต้องระเบิดดินดาน / ST / มินิคอมบาย</li>
-                                            <li>พื้นที่ขยาย (เปลี่ยนพืชอื่นมาปลูกอ้อย)</li>
-                                            <li>GIS ตรวจสอบแปลงก่อนปลูก</li>
-                                            <li>พื้นที่ขยาย ต้องไม่อยู่ในระบบ KAT ปี 68/69</li>
+                                            <li>   ต้องระเบิดดินดาน / ST / มินิคอมบาย</li>
+                                            <li>   พื้นที่ขยาย (เปลี่ยนพืชอื่นมาปลูกอ้อย)</li>
+                                            <li>   GIS ตรวจสอบแปลงก่อนปลูก</li>
+                                            <li>   พื้นที่ขยาย ต้องไม่อยู่ในระบบ KAT ปี 68/69</li>
                                         </ul>
                                     </li>
                                     <li>
                                         <strong>ผลผลิต</strong>
                                         <ul class="sub-condition-list">
-                                            <li>ปีที่ 1: 13 ตัน/ไร่ จำนวน 195,000 ตัน/ปี</li>
-                                            <li>ปีที่ 2: 11 ตัน/ไร่ จำนวน 165,000 ตัน/ปี</li>
-                                            <li>ปีที่ 3: 9 ตัน/ไร่ จำนวน 135,000 ตัน/ปี</li>
-                                            <li>รวมผลผลิต 3 ปี: จำนวน 495,000 ตัน/ปี</li>
+                                            <li>   ปีที่ 1: 13 ตัน/ไร่ จำนวน 195,000 ตัน/ปี</li>
+                                            <li>   ปีที่ 2: 11 ตัน/ไร่ จำนวน 165,000 ตัน/ปี</li>
+                                            <li>   ปีที่ 3: 9 ตัน/ไร่ จำนวน 135,000 ตัน/ปี</li>
+                                            <li>   รวมผลผลิต 3 ปี: จำนวน 495,000 ตัน/ปี</li>
                                         </ul>
                                     </li>
                                     <li>
                                         <strong>งบประมาณ</strong>
                                         <ul class="sub-condition-list">
-                                            <li>งบประมาณต่อปี: จำนวน 62 บาท/ตัน</li>
-                                            <li>งบประมาณ 3 ปี: จำนวน 24 บาท/ตัน</li>
+                                            <li>   งบประมาณต่อปี: จำนวน 62 บาท/ตัน</li>
+                                            <li>   งบประมาณ 3 ปี: จำนวน 24 บาท/ตัน</li>
                                         </ul>
                                     </li>
                                 </ol>
@@ -1599,43 +1599,43 @@
                                     <li>
                                         <strong>โครงการเปลี่ยนพืชอื่นมาปลูกอ้อย</strong>
                                         <ul class="sub-condition-list">
-                                            <li>เพื่อเป็นกลยุทธ์ขยายพื้นที่</li>
-                                            <li>ระยะเวลาปลูก 1 ตุลาคม 2568 ถึง 28 กุมภาพันธ์ 2569</li>
-                                            <li>พื้นที่ปลูกอ้อยใหม่ (ปลายฝนขยาย) จำนวน 30,000 ไร่</li>
-                                            <li>ช่วยค่าปลูก 700 บาท/ไร่ จำนวน 21,000,000 บาท</li>
+                                            <li>   เพื่อเป็นกลยุทธ์ขยายพื้นที่</li>
+                                            <li>   ระยะเวลาปลูก 1 ตุลาคม 2568 ถึง 28 กุมภาพันธ์ 2569</li>
+                                            <li>   พื้นที่ปลูกอ้อยใหม่ (ปลายฝนขยาย) จำนวน 30,000 ไร่</li>
+                                            <li>   ช่วยค่าปลูก 700 บาท/ไร่ จำนวน 21,000,000 บาท</li>
                                         </ul>
                                     </li>
                                     <li>
                                         <strong>เงื่อนไขการจ่าย</strong>
                                         <ul class="sub-condition-list">
-                                            <li>ไม่จ่ายเป็นเงินสด</li>
-                                            <li>ลดหนี้ค่าปุ๋ย ยา บริการจักรกล พันธุ์อ้อย</li>
-                                            <li>พื้นที่เข้าร่วมโครงการปลูกอ้อยในนา ไม่ได้รับสิทธิ์</li>
+                                            <li>   ไม่จ่ายเป็นเงินสด</li>
+                                            <li>   ลดหนี้ค่าปุ๋ย ยา บริการจักรกล พันธุ์อ้อย</li>
+                                            <li>   พื้นที่เข้าร่วมโครงการปลูกอ้อยในนา ไม่ได้รับสิทธิ์</li>
                                         </ul>
                                     </li>
                                     <li>
                                         <strong>วิธีการปลูก</strong>
                                         <ul class="sub-condition-list">
-                                            <li>ต้องระเบิดดินดาน / ST / มินิคอมบาย</li>
-                                            <li>พื้นที่ขยาย (เปลี่ยนพืชอื่นมาปลูกอ้อย)</li>
-                                            <li>GIS ตรวจสอบแปลงก่อนปลูก</li>
-                                            <li>พื้นที่ขยาย ต้องไม่อยู่ในระบบ KAT ปี 68/69</li>
+                                            <li>   ต้องระเบิดดินดาน / ST / มินิคอมบาย</li>
+                                            <li>   พื้นที่ขยาย (เปลี่ยนพืชอื่นมาปลูกอ้อย)</li>
+                                            <li>   GIS ตรวจสอบแปลงก่อนปลูก</li>
+                                            <li>   พื้นที่ขยาย ต้องไม่อยู่ในระบบ KAT ปี 68/69</li>
                                         </ul>
                                     </li>
                                     <li>
                                         <strong>ผลผลิต</strong>
                                         <ul class="sub-condition-list">
-                                            <li>ปีที่ 1: 13 ตัน/ไร่ จำนวน 390,000 ตัน/ปี</li>
-                                            <li>ปีที่ 2: 11 ตัน/ไร่ จำนวน 330,000 ตัน/ปี</li>
-                                            <li>ปีที่ 3: 9 ตัน/ไร่ จำนวน 270,000 ตัน/ปี</li>
-                                            <li>รวมผลผลิต 3 ปี: จำนวน 990,000 ตัน/ปี</li>
+                                            <li>   ปีที่ 1: 13 ตัน/ไร่ จำนวน 390,000 ตัน/ปี</li>
+                                            <li>   ปีที่ 2: 11 ตัน/ไร่ จำนวน 330,000 ตัน/ปี</li>
+                                            <li>   ปีที่ 3: 9 ตัน/ไร่ จำนวน 270,000 ตัน/ปี</li>
+                                            <li>   รวมผลผลิต 3 ปี: จำนวน 990,000 ตัน/ปี</li>
                                         </ul>
                                     </li>
                                     <li>
                                         <strong>งบประมาณ</strong>
                                         <ul class="sub-condition-list">
-                                            <li>งบประมาณต่อปี: จำนวน 54 บาท/ตัน</li>
-                                            <li>งบประมาณ 3 ปี: จำนวน 21 บาท/ตัน</li>
+                                            <li>   งบประมาณต่อปี: จำนวน 54 บาท/ตัน</li>
+                                            <li>   งบประมาณ 3 ปี: จำนวน 21 บาท/ตัน</li>
                                         </ul>
                                     </li>
                                 </ol>
@@ -1704,7 +1704,7 @@
                 </div>
             </div>
             <hr class="my-3" style="border-color: rgba(255,255,255,0.1);">
-            <p class="mb-0 small">© พ.ศ. 2569 KBS Group | ระบบจัดการโครงการปลูกอ้อยในนาและเปลี่ยนพืชอื่นมาปลูกอ้อย</p>
+            <p class="mb-0 small">© พ.ศ. 2569 KBS Group | ระบบจัดการโครงการปลูกอ้อยในนา และโครงการเปลี่ยนพืชอื่นมาปลูกอ้อย</p>
         </div>
     </div>
 
@@ -2406,12 +2406,12 @@
             // Define which columns to show in table
             const tableColumns = [
                 'เลขแปลงintech',
+                'เลขโควต้า',
                 'ชื่อชาวไร่',
                 'เขต',
+                'รหัสนักเกษตร',
                 'ชื่อนักเกษตร',
-                'พื้นที่',
                 'วันที่ปลูก',
-                'เปอร์เซ็นการงอก',
                 'เงื่อนไขโครงการ'
             ];
             
