--- a/index.html
+++ b/index.html
@@ -1442,7 +1442,7 @@
                                 <ol class="condition-list">
                                     <li>
                                         <strong>โครงการปลูกอ้อยในนา</strong>
-                                        <ul class="sub-condition-list">
+                                        <ul class="sub-condition-list me-1">
                                             <li>   เพื่อเป็นกลยุทธ์ขยายพื้นที่</li>
                                             <li>   ระยะเวลาปลูก 1 ตุลาคม 2568 ถึง 28 กุมภาพันธ์ 2569</li>
                                             <li>   พื้นที่ปลูกอ้อยใหม่ (ปลายฝนขยาย) จำนวน 15,000 ไร่</li>
