--- a/index.html
+++ b/index.html
@@ -1339,7 +1339,14 @@
                 <button class="btn-blue" id="reset-filters-top">
                     <i class="fas fa-filter me-1"></i>ล้างตัวกรอง
                 </button>
-               
+                <div class="ms-auto">
+                    <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-outline-green active" id="view-toggle-btn-table">
+                            <i class="fas fa-table me-1"></i>ตาราง
+                        </button>
+                        <button type="button" class="btn btn-outline-green" id="view-toggle-btn-card">
+                            <i class="fas fa-th-large me-1"></i>การ์ด
+                        </button>
                     </div>
                 </div>
             </div>
