--- a/index.html
+++ b/index.html
@@ -1404,24 +1404,23 @@
                             <div class="col-md-6">
                                 <div class="stat-item stat-item-checked">
                                     <div class="stat-value comma-number" id="checked-projects">0</div>
-                                    <div class="stat-title">ตรวจแล้ว</div>
+                                    <div class="stat-title">ตรวจแล้ว (แปลง)</div>
                                 </div>
                             </div>
-                            <div class="col-md-6">
-                                <div class="stat-item stat-item-not-checked">
-                                    <div class="stat-value comma-number" id="not-checked-projects">0</div>
-                                    <div class="stat-title">ยังไม่ตรวจ</div>
-                                </div>
-                            </div>
-                        </div>
-                        
-                        <div class="row g-3">
+                            <div class="row g-3">
                             <div class="col-md-6">
                                 <div class="stat-item">
                                     <div class="stat-value comma-number" id="checked-area">0</div>
                                     <div class="stat-title">ตรวจแล้ว (ไร่)</div>
+                                      </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="stat-item stat-item-not-checked">
+                                    <div class="stat-value comma-number" id="not-checked-projects">0</div>
+                                    <div class="stat-title">ยังไม่ตรวจ (แปลง)</div>
                                 </div>
                             </div>
+                        </div>
                             <div class="col-md-6">
                                 <div class="stat-item">
                                     <div class="stat-value comma-number" id="not-checked-area">0</div>
