--- a/index.html
+++ b/index.html
@@ -1202,14 +1202,14 @@
                     <i class="fas fa-exchange-alt"></i>เปลี่ยนพืชอื่นมาปลูกอ้อย ปี 69/70
                 </button>
             </div>
-        <!-- Project Stats with Pie Chart และปุ่ม Export -->
+      <!-- Project Stats with Pie Chart และปุ่ม Export -->
 <div class="project-stats-container">
     <div class="stats-actions-container">
         <!-- ส่วน Pie Chart (ขนาดใหญ่ขึ้น) -->
         <div class="stats-section">
             <div class="row">
-                <!-- Pie Chart Section - ลดจาก col-lg-6 เป็น col-lg-4 -->
-                <div class="col-lg-4">
+                <!-- Pie Chart Section - ขยายเป็นครึ่งหน้า (50%) -->
+                <div class="col-lg-6">
                     <div class="pie-chart-container">
                         <h4 class="chart-title">
                             <i class="fas fa-chart-pie me-2"></i>ผลการตรวจแปลง
@@ -1244,8 +1244,8 @@
                     </div>
                 </div>
                 
-                <!-- Project Stats - เพิ่มจาก col-lg-6 เป็น col-lg-8 -->
-                <div class="col-lg-8">
+                <!-- Project Stats - ครึ่งหน้าอีกด้าน (50%) -->
+                <div class="col-lg-6">
                     <div class="stats-grid" id="project-stats">
                         <div class="stat-item">
                             <div class="stat-value text-success comma-number" id="total-projects">0</div>
