--- a/index.html
+++ b/index.html
@@ -1121,19 +1121,16 @@
     </style>
 </head>
 <body>
-    <!-- Header -->
-    <div class="header">
-        <div class="container">
-            <div class="header-content">
-                <div class="logo-container">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/0/0d/KBS-LOGO-resize.png" 
-                         alt="KBS Group Logo" 
-                         class="logo-img kbs-logo">
-                    <div class="logo-text">
-                        <h1 class="logo-title">ระบบจัดการโครงการปลูกอ้อยในนา และโครงการเปลี่ยนพืชอื่นมาปลูกอ้อย ปี 69/70</h1>
-                        <p class="logo-subtitle">โรงงานน้ำตาลครบุรี และโรงงานน้ำตาลสีคิ้ว</p>
-                    </div>
-                </div>
+   <!-- ในส่วน Header -->
+<div class="logo-container">
+    <img src="https://kbs.co.th/images/logo.png" 
+         alt="KBS Sugar Logo" 
+         class="logo-img kbs-logo">
+    <div class="logo-text">
+        <h1 class="logo-title">ระบบจัดการโครงการปลูกอ้อยในนา และโครงการเปลี่ยนพืชอื่นมาปลูกอ้อย ปี 69/70</h1>
+        <p class="logo-subtitle">โรงงานน้ำตาลครบุรี และโรงงานน้ำตาลสีคิ้ว</p>
+    </div>
+</div>
                 <div class="row align-items-center">
                     <div class="col-md-8">
                         <p class="mb-0">ข้อมูลโครงการปลูกอ้อยในนา และโครงการเปลี่ยนพืชอื่นมาปลูกอ้อย ปี 69/70</p>
@@ -1156,9 +1153,9 @@
                 <i class="fas fa-cog"></i>ตั้งค่าเริ่มต้นระบบ
             </div>
             <div class="card-body setup-section">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/0/0d/KBS-LOGO-resize.png" 
-                     alt="KBS Group Logo" 
-                     class="setup-kbs-logo kbs-logo">
+    <img src="https://kbs.co.th/images/logo.png" 
+         alt="KBS Sugar Logo" 
+         class="setup-kbs-logo kbs-logo">
                 
                 <h2 class="setup-title">KBS Group - ระบบจัดการโครงการปลูกอ้อย</h2>
                 <p class="mb-4">ระบบนี้ใช้ข้อมูลจาก Google Sheets ที่เผยแพร่เป็นสาธารณะ (Public Mode)</p>
@@ -1742,12 +1739,12 @@
         </div>
     </div>
 
-    <!-- Footer -->
-    <div class="footer">
-        <div class="container">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/0/0d/KBS-LOGO-resize.png" 
-                 alt="KBS Group Logo" 
-                 class="footer-logo kbs-logo">
+    <!-- ในส่วน Footer -->
+<div class="footer">
+    <div class="container">
+        <img src="https://kbs.co.th/images/logo.png" 
+             alt="KBS Sugar Logo" 
+             class="footer-logo kbs-logo">
             <div class="row">
                 <div class="col-md-6 text-md-start">
                     <h5 class="mb-3">KBS Group</h5>
