--- a/index.html
+++ b/index.html
@@ -1244,44 +1244,48 @@
                     </div>
                 </div>
                 
-                <!-- Project Stats - เหลือ 30% ของหน้า -->
-                <div class="col-lg-4">
-                    <div class="stats-grid" id="project-stats">
-                        <div class="stat-item">
-                            <div class="stat-value text-success comma-number" id="total-projects">0</div>
-                            <div class="stat-title">ทั้งหมด(แปลง)</div>
-                        </div>
-                        <div class="stat-item">
-                            <div class="stat-value comma-number" id="total-area">0</div>
-                            <div class="stat-title">พื้นที่รวม(ไร่)</div>
-                        </div>
-                        <div class="stat-item stat-item-checked">
-                            <div class="stat-value text-primary comma-number" id="checked-projects">0</div>
-                            <div class="stat-title">ตรวจแล้ว(แปลง)</div>
-                        </div>
-                        <div class="stat-item stat-item-checked">
-                            <div class="stat-value text-primary comma-number" id="checked-area">0</div>
-                            <div class="stat-title">ตรวจแล้ว (ไร่)</div>
-                        </div>
-                        <div class="stat-item stat-item-not-checked">
-                            <div class="stat-value comma-number" id="not-checked-projects">0</div>
-                            <div class="stat-title">ยังไม่ตรวจ(แปลง)</div>
-                        </div>
-                        <div class="stat-item stat-item-not-checked">
-                            <div class="stat-value comma-number" id="not-checked-area">0</div>
-                            <div class="stat-title">ยังไม่ตรวจ(ไร่)</div>
-                        </div>
-                        <div class="stat-item stat-item-passed">
-                            <div class="stat-value comma-number" id="passed-projects">0</div>
-                            <div class="stat-title">ผ่าน(แปลง)</div>
-                        </div>
-                        <div class="stat-item stat-item-failed">
-                            <div class="stat-value comma-number" id="failed-projects">0</div>
-                            <div class="stat-title">ไม่ผ่าน(แปลง)</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+               <!-- Project Stats - เหลือ 30% ของหน้า -->
+<div class="col-lg-4">
+    <div class="stats-grid" id="project-stats">
+        <div class="stat-item">
+            <div class="stat-value text-success comma-number" id="total-projects">0</div>
+            <div class="stat-title">ทั้งหมด(แปลง)</div>
+        </div>
+        <div class="stat-item">
+            <div class="stat-value comma-number" id="total-area">0</div>
+            <div class="stat-title">พื้นที่รวม(ไร่)</div>
+        </div>
+        <div class="stat-item stat-item-checked">
+            <div class="stat-value text-primary comma-number" id="checked-projects">0</div>
+            <div class="stat-title">ตรวจแล้ว(แปลง)</div>
+        </div>
+        <div class="stat-item stat-item-checked">
+            <div class="stat-value text-primary comma-number" id="checked-area">0</div>
+            <div class="stat-title">ตรวจแล้ว (ไร่)</div>
+        </div>
+        <div class="stat-item stat-item-not-checked">
+            <div class="stat-value comma-number" id="not-checked-projects">0</div>
+            <div class="stat-title">ยังไม่ตรวจ(แปลง)</div>
+        </div>
+        <div class="stat-item stat-item-not-checked">
+            <div class="stat-value comma-number" id="not-checked-area">0</div>
+            <div class="stat-title">ยังไม่ตรวจ(ไร่)</div>
+        </div>
+        <div class="stat-item stat-item-passed">
+            <div class="stat-value comma-number" id="passed-projects">0</div>
+            <div class="stat-title">ผ่าน(แปลง)</div>
+        </div>
+        <div class="stat-item stat-item-passed">
+            <div class="stat-value comma-number" id="passed-area">0</div>
+            <div class="stat-title">ผ่าน(ไร่)</div>
+        </div>
+        <div class="stat-item stat-item-failed">
+            <div class="stat-value comma-number" id="failed-projects">0</div>
+            <div class="stat-title">ไม่ผ่าน(แปลง)</div>
+        </div>
+        <div class="stat-item stat-item-failed">
+            <div class="stat-value comma-number" id="failed-area">0</div>
+            <div class="stat-title">ไม่ผ่าน(ไร่)</div>
         </div>
     </div>
 </div>
