--- a/index.html
+++ b/index.html
@@ -1127,7 +1127,7 @@
             <div class="header-content">
                 <div class="logo-container">
                     <!-- เปลี่ยนเป็นโลโก้ KBS Sugar จากลิงค์ที่ให้ -->
-                    <img src="https://www.kbssugar.com/assets/img/logo.png" 
+                    <img src="https://i.postimg.cc/T2FXjK6h/1768036197546.jpg" 
                          alt="KBS Sugar Logo" 
                          class="logo-img kbs-logo">
                     <div class="logo-text">
@@ -1158,7 +1158,7 @@
             </div>
             <div class="card-body setup-section">
                 <!-- เปลี่ยนเป็นโลโก้ KBS Sugar จากลิงค์ที่ให้ -->
-                <img src="https://www.kbssugar.com/assets/img/logo.png" 
+                <img src="https://i.postimg.cc/T2FXjK6h/1768036197546.jpg" 
                      alt="KBS Sugar Logo" 
                      class="setup-kbs-logo kbs-logo">
                 
@@ -1753,7 +1753,7 @@
     <div class="footer">
         <div class="container">
             <!-- เปลี่ยนเป็นโลโก้ KBS Sugar จากลิงค์ที่ให้ -->
-            <img src="https://www.kbssugar.com/assets/img/logo.png" 
+            <img src="https://i.postimg.cc/T2FXjK6h/1768036197546.jpg" 
                  alt="KBS Sugar Logo" 
                  class="footer-logo kbs-logo">
             <div class="row">
